--- a/style/style.css
+++ b/style/style.css
@@ -117,10 +117,6 @@ button {
     transition: background-color 0.5s ease;
 }
 
-.nav__logo:hover {
-    background-color: var(--black-dlc);
-}
-
 .nav__logo > img {
     width: 78px;
     height: 24px;
@@ -143,11 +139,6 @@ a.nav__link {
     -webkit-transition: background-color 0.5s ease;
     -moz-transition: background-color 0.5s ease;
     transition: background-color 0.5s ease;
-}
-
-a.nav__link:hover {
-    background-color: var(--blue);
-    font-weight: 700;
 }
 
 .hero-section__content {
@@ -332,14 +323,6 @@ button.philosophy-section-left-side__btn {
     line-height: 150%;
 }
 
-button.philosophy-section-left-side__btn:hover {
-    background-color: var(--black-dlc);
-    -webkit-animation: pulseOne 4.5s ease infinite;
-    -moz-animation: pulseOne 4.5s ease infinite;
-    animation: pulseOne 4.5s ease infinite;
-    color: #fff;
-}
-
 button.philosophy-section-left-side__btn-active {
     background-color: var(--black-dlc);
     -webkit-animation: pulseOne 4.5s ease infinite;
@@ -518,10 +501,6 @@ h2.skills-section-left-side__title {
     -webkit-transition: background-color 0.5s ease;
     -moz-transition: background-color 0.5s ease;
     transition: background-color 0.5s ease;
-}
-
-.photo-section__tab-btn:hover {
-    background-color: var(--blue);
 }
 
 .photo-section__tab-btn-active {
@@ -734,14 +713,6 @@ h2.skills-section-left-side__title {
     line-height: 150%;
 }
 
-.contact-section-right-side__container:nth-child(4) > button:hover {
-    color: #fff;
-    background-color: var(--black-dlc);
-    -webkit-animation: pulseOne 4.5s ease infinite;
-    -moz-animation: pulseOne 4.5s ease infinite;
-    animation: pulseOne 4.5s ease infinite;
-}
-
 .footer-section {
     margin: 0 3.5rem;
     padding: 1rem 3.5rem;
@@ -930,10 +901,6 @@ h2._hidden {
         flex-direction: column;
         justify-content: center;
         gap: 0.5rem;
-    }
-
-    .nav__hamburger:hover {
-        background-color: var(--black-dlc);
     }
 
     .nav__hamburger-line {
@@ -1169,4 +1136,78 @@ h2._hidden {
         font-size: 0.3rem;
     }
 
+}
+
+@media (hover: hover) {
+
+    .nav__logo:hover {
+        background-color: var(--black-dlc);
+    }
+
+    a.nav__link:hover {
+        background-color: var(--blue);
+        font-weight: 700;
+    }
+
+    button.philosophy-section-left-side__btn:hover {
+        background-color: var(--black-dlc);
+        -webkit-animation: pulseOne 4.5s ease infinite;
+        -moz-animation: pulseOne 4.5s ease infinite;
+        animation: pulseOne 4.5s ease infinite;
+        color: #fff;
+    }
+
+    .nav__hamburger:hover {
+        background-color: var(--black-dlc);
+    }
+
+    .contact-section-right-side__container:nth-child(4) > button:hover {
+        color: #fff;
+        background-color: var(--black-dlc);
+        -webkit-animation: pulseOne 4.5s ease infinite;
+        -moz-animation: pulseOne 4.5s ease infinite;
+        animation: pulseOne 4.5s ease infinite;
+    }
+
+    .photo-section__tab-btn:hover {
+        background-color: var(--blue);
+    }
+}
+
+@media (hover: none) {
+    @media (hover: hover) {
+
+        .nav__logo:active {
+            background-color: var(--black-dlc);
+        }
+    
+        a.nav__link:active {
+            background-color: var(--blue);
+            font-weight: 700;
+        }
+    
+        button.philosophy-section-left-side__btn:active {
+            background-color: var(--black-dlc);
+            -webkit-animation: pulseOne 4.5s ease infinite;
+            -moz-animation: pulseOne 4.5s ease infinite;
+            animation: pulseOne 4.5s ease infinite;
+            color: #fff;
+        }
+    
+        .nav__hamburger:active {
+            background-color: var(--black-dlc);
+        }
+    
+        .contact-section-right-side__container:nth-child(4) > button:active {
+            color: #fff;
+            background-color: var(--black-dlc);
+            -webkit-animation: pulseOne 4.5s ease infinite;
+            -moz-animation: pulseOne 4.5s ease infinite;
+            animation: pulseOne 4.5s ease infinite;
+        }
+    
+        .photo-section__tab-btn:active {
+            background-color: var(--blue);
+        }
+    }
 }
